--- a/super/index (1).html
+++ b/super/index (1).html
@@ -11,7 +11,7 @@
 		<div class="leftBox">
 			<div class="content">
 				<h1>
-					Women Empowerment Through Tourism TRAINING PROGRAM
+					Women Empowerment Through Tourism TRAINING program
 				</h1>
 				<p>
 					The WETS training program is designed to empower women with the skills, knowledge, and confidence needed to thrive in Rwanda’s tourism industry. This comprehensive program consists of seven key modules, each addressing crucial aspects of tourism, customer service, digital marketing, hospitality, tour guiding, entrepreneurship, and safety. The curriculum balances theoretical knowledge with hands-on practice, preparing women to engage professionally in various tourism roles or to launch their own tourism-related businesses. Each course within the program builds foundational skills while fostering self-reliance, leadership, and professionalism. Spanning approximately 23 weeks, WETS aims to create pathways for women to become influential contributors to Rwanda’s tourism sector, promoting sustainable tourism practices, local heritage appreciation, and economic growth.
